docs/1.13/autoscaling-v2beta1-horizontalPodAutoscalerSpec.md
---
permalink: /1.13/autoscaling/v2beta1/horizontalPodAutoscalerSpec
---

# package horizontalPodAutoscalerSpec

HorizontalPodAutoscalerSpec describes the desired functionality of the HorizontalPodAutoscaler.

## Index

* [`fn withMaxReplicas(maxReplicas)`](#fn-withmaxreplicas)
* [`fn withMetrics(metrics)`](#fn-withmetrics)
* [`fn withMetricsMixin(metrics)`](#fn-withmetricsmixin)
* [`fn withMinReplicas(minReplicas)`](#fn-withminreplicas)
* [`fn withScaleTargetRef(scaleTargetRef)`](#fn-withscaletargetref)

## Fields

### fn withMaxReplicas

```ts
withMaxReplicas(maxReplicas)
```

maxReplicas is the upper limit for the number of replicas to which the autoscaler can scale up. It cannot be less that minReplicas.

### fn withMetrics

```ts
withMetrics(metrics)
```

metrics contains the specifications for which to use to calculate the desired replica count (the maximum replica count across all metrics will be used).  The desired replica count is calculated multiplying the ratio between the target value and the current value by the current number of pods.  Ergo, metrics used must decrease as the pod count is increased, and vice-versa.  See the individual metric source types for more information about how each type of metric must respond.

### fn withMetricsMixin

```ts
withMetricsMixin(metrics)
```

metrics contains the specifications for which to use to calculate the desired replica count (the maximum replica count across all metrics will be used).  The desired replica count is calculated multiplying the ratio between the target value and the current value by the current number of pods.  Ergo, metrics used must decrease as the pod count is increased, and vice-versa.  See the individual metric source types for more information about how each type of metric must respond.

**Note:** This function appends passed data to existing values

### fn withMinReplicas

```ts
withMinReplicas(minReplicas)
```

minReplicas is the lower limit for the number of replicas to which the autoscaler can scale down. It defaults to 1 pod.

### fn withScaleTargetRef

```ts
withScaleTargetRef(scaleTargetRef)
```

CrossVersionObjectReference contains enough information to let you identify the referred resource.